David Murn            scuffer@hups.apana.org.au         11 Nov 1998-15 Nov 1999
Giles Russell                                           22 Nov 1999
Greg Haerr                                              14 Jul 1999-20 Jul 1999
Harry Kalogirou       HarKal@rainbow.cs.unipi.gr        20 Jun 2001-30 Apr 2002
Jacek Lipkowski       sq5bpf@acid.ch.pw.edu.pl          20 Jan 2002
M Warner Losh         imp@village.org                   20 Jan 2002
Mario Frasca                                            20 Jan 2000-14 Feb 2000
Paul Nasrat           pauln@truemesh.com                29 Oct 2001-24 Apr 2002
Per Olofsson          MagerValp@cling.gu.se             25 Feb 2000
Peter L Vachuska      pvachusk@nconnect.net             13 Aug 2001
Richard Wallman       murkygoth@murkygoth.uklinux.net    2 Apr 2002
Riley Williams        Riley@Williams.Name               16 Nov 1998- 5 May 2002
Roman Festchook       roma@polesye.net                  27 Oct 2001
Simon Weijgers        simon@weijgers.com                16 Sep 1998-15 Nov 1999
Simon Wood                                               6 Jan 2000-12 Jan 2000
Thomas McWilliams     tgm9999@yahoo.com                 27 Aug 1999- 2 Apr 2001

-------------------------------------------------------------------------------

Sun May  5 23:28:40 BST 2002	Riley Williams <Riley@Williams.Name>

	* Removed unused INODE_VERSION macros from include header files
	  as they conflicted with each other.

Sun May  5 23:11:33 BST 2002	Riley Williams <Riley@Williams.Name>

	* Verified that fs/elksfs/*.c is clean as far as `splint -weak`
	  is concerned. This also eliminated a fair chunk of redundant
	  code in the form of static functions that are only called if
	  BLOAT_FS is defined. However, as this section is not included
	  in the default configuration, this has probably not reduced
	  the code size, although this stands a better chance of actually
	  compiling after this cleanup.
	* Verified that current codebase both compiles and boots on